--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
             <div id="result"></div>
         </form>
     </div>
+    <div id="scroll">
 
-    <div id="forecastDiv">
+        <div id="forecastDiv">
+    </div>
 
     </div>
 
